Time: 16 ms (5.46%), Space: 56.2 MB (95.48%) - LeetHub